force-app/main/default/objects/Prospect__c/Prospect__c.object-meta.xml
<CustomObject>
    <description>Piste de recrutement Scouting 360.</description>
    <label>Prospect</label>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>