force-app/main/default/objects/Prospect__c/fields/ApiAppearances__c.field-meta.xml
<CustomField>
    <description>Matchs joués (API games.appearences).</description>
    <fullName>ApiAppearances__c</fullName>
    <label>API Appearances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>