force-app/main/default/objects/Prospect__c/fields/ApiAssists__c.field-meta.xml
<CustomField>
    <description>Passes décisives (API goals.assists).</description>
    <fullName>ApiAssists__c</fullName>
    <label>API Assists</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>