force-app/main/default/objects/Prospect__c/fields/ApiDuelsWon__c.field-meta.xml
<CustomField>
    <description>Duels gagnés (API duels.won).</description>
    <fullName>ApiDuelsWon__c</fullName>
    <label>API Duels Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>