force-app/main/default/objects/Prospect__c/fields/ApiGoals__c.field-meta.xml
<CustomField>
    <description>Buts (API goals.total).</description>
    <fullName>ApiGoals__c</fullName>
    <label>API Goals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>