force-app/main/default/objects/Prospect__c/fields/ApiLineups__c.field-meta.xml
<CustomField>
    <description>Titularisations (API games.lineups).</description>
    <fullName>ApiLineups__c</fullName>
    <label>API Lineups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>