force-app/main/default/objects/Prospect__c/fields/ApiMinutes__c.field-meta.xml
<CustomField>
    <description>Minutes jouées (API games.minutes).</description>
    <fullName>ApiMinutes__c</fullName>
    <label>API Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>