force-app/main/default/objects/Prospect__c/fields/ApiPassesAccuracyPct__c.field-meta.xml
<CustomField>
    <description>Précision passes % (API passes.accuracy).</description>
    <fullName>ApiPassesAccuracyPct__c</fullName>
    <label>API Passes Accuracy %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>