force-app/main/default/objects/Prospect__c/fields/ApiPassesKey__c.field-meta.xml
<CustomField>
    <description>Passes clés (API passes.key).</description>
    <fullName>ApiPassesKey__c</fullName>
    <label>API Key Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>