force-app/main/default/objects/Prospect__c/fields/ApiPassesTotal__c.field-meta.xml
<CustomField>
    <description>Passes totales (API passes.total).</description>
    <fullName>ApiPassesTotal__c</fullName>
    <label>API Passes Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>