force-app/main/default/objects/Prospect__c/fields/ApiRedCards__c.field-meta.xml
<CustomField>
    <description>Cartons rouges (API cards.red).</description>
    <fullName>ApiRedCards__c</fullName>
    <label>API Red Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>