force-app/main/default/objects/Prospect__c/fields/ApiShotsOnTarget__c.field-meta.xml
<CustomField>
    <description>Tirs cadrés (API shots.on).</description>
    <fullName>ApiShotsOnTarget__c</fullName>
    <label>API Shots On Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>