force-app/main/default/objects/Prospect__c/fields/ApiShotsTotal__c.field-meta.xml
<CustomField>
    <description>Tirs (API shots.total).</description>
    <fullName>ApiShotsTotal__c</fullName>
    <label>API Shots Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>