force-app/main/default/objects/Prospect__c/fields/ApiStatisticsJson__c.field-meta.xml
<CustomField>
    <description>Bloc statistics[0] API-Football (JSON brut).</description>
    <fullName>ApiStatisticsJson__c</fullName>
    <label>API Statistics JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>