force-app/main/default/objects/Prospect__c/fields/ApiStatsSeason__c.field-meta.xml
<CustomField>
    <description>Saison API-Football (année de début, ex. 2025).</description>
    <fullName>ApiStatsSeason__c</fullName>
    <label>API Stats Season</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>