force-app/main/default/objects/Prospect__c/fields/ApiTacklesTotal__c.field-meta.xml
<CustomField>
    <description>Tacles (API tackles.total).</description>
    <fullName>ApiTacklesTotal__c</fullName>
    <label>API Tackles Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>