force-app/main/default/objects/Prospect__c/fields/ApiYellowCards__c.field-meta.xml
<CustomField>
    <description>Cartons jaunes (API cards.yellow).</description>
    <fullName>ApiYellowCards__c</fullName>
    <label>API Yellow Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>