force-app/main/default/objects/Prospect__c/fields/Championship__c.field-meta.xml
<CustomField>
    <fullName>Championship__c</fullName>
    <description>Championnat / ligue (segmentation).</description>
    <label>Championship</label>
    <length>120</length>
    <type>Text</type>
</CustomField>