force-app/main/default/objects/Prospect__c/fields/ConvertedAthlete__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAthlete__c</fullName>
    <label>Converted Athlete</label>
    <referenceTo>Athlete__c</referenceTo>
    <relationshipLabel>Origin Prospects</relationshipLabel>
    <relationshipName>OriginProspects</relationshipName>
    <type>Lookup</type>
</CustomField>