force-app/main/default/objects/Prospect__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Pays (club / lieu) — alimenté Data Cloud ou saisie.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>