force-app/main/default/objects/Prospect__c/fields/CurrentClub__c.field-meta.xml
<CustomField>
    <fullName>CurrentClub__c</fullName>
    <label>Current Club</label>
    <length>120</length>
    <type>Text</type>
</CustomField>