force-app/main/default/objects/Prospect__c/fields/DataConfidence__c.field-meta.xml
<CustomField>
    <description>Confiance data du scoring scouting (0-100).</description>
    <fullName>DataConfidence__c</fullName>
    <label>Data Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>