force-app/main/default/objects/Prospect__c/fields/FitScore__c.field-meta.xml
<CustomField>
    <description>Score de fit tactique/club (0-100).</description>
    <fullName>FitScore__c</fullName>
    <label>Fit Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>