force-app/main/default/objects/Prospect__c/fields/GeoLatitude__c.field-meta.xml
<CustomField>
    <fullName>GeoLatitude__c</fullName>
    <description>Latitude pour cartographie (Data Cloud / géocodage).</description>
    <label>Geo Latitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>