force-app/main/default/objects/Prospect__c/fields/GeoLongitude__c.field-meta.xml
<CustomField>
    <fullName>GeoLongitude__c</fullName>
    <description>Longitude pour cartographie.</description>
    <label>Geo Longitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>