force-app/main/default/objects/Prospect__c/fields/LastDataCloudSync__c.field-meta.xml
<CustomField>
    <description>Dernière synchronisation Data Cloud vers Core.</description>
    <fullName>LastDataCloudSync__c</fullName>
    <label>Last Data Cloud Sync</label>
    <type>DateTime</type>
</CustomField>