force-app/main/default/objects/Prospect__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <length>80</length>
    <type>Text</type>
</CustomField>