force-app/main/default/objects/Prospect__c/fields/PotentialScore__c.field-meta.xml
<CustomField>
    <description>Score potentiel du prospect (0-100).</description>
    <fullName>PotentialScore__c</fullName>
    <label>Potential Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>