force-app/main/default/objects/Prospect__c/fields/RiskScore__c.field-meta.xml
<CustomField>
    <description>Score de risque scouting (0-100).</description>
    <fullName>RiskScore__c</fullName>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>