force-app/main/default/objects/Prospect__c/fields/ScoutingFeaturesJson__c.field-meta.xml
<CustomField>
    <description>Snapshot JSON des features scouting activées.</description>
    <fullName>ScoutingFeaturesJson__c</fullName>
    <label>Scouting Features JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>