force-app/main/default/objects/Prospect__c/fields/ScoutingScore__c.field-meta.xml
<CustomField>
    <description>Score scouting global activé depuis Data Cloud.</description>
    <fullName>ScoutingScore__c</fullName>
    <label>Scouting Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>