force-app/main/default/objects/Prospect__c/fields/ScoutingSummary__c.field-meta.xml
<CustomField>
    <description>Résumé scouting activé depuis Data Cloud/IA.</description>
    <fullName>ScoutingSummary__c</fullName>
    <label>Scouting Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>