force-app/main/default/objects/Prospect__c/fields/TopRisks__c.field-meta.xml
<CustomField>
    <description>Top risques identifiés pour le prospect.</description>
    <fullName>TopRisks__c</fullName>
    <label>Top Risks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>