force-app/main/default/objects/Prospect__c/validationRules/ConvertedNeedsAthlete.validationRule-meta.xml
<ValidationRule>
    <fullName>ConvertedNeedsAthlete</fullName>
    <active>true</active>
    <description>Si le prospect est converti, un Athlete lié doit être renseigné.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Converted"), ISBLANK(ConvertedAthlete__c))</errorConditionFormula>
    <errorDisplayField>ConvertedAthlete__c</errorDisplayField>
    <errorMessage>Converted prospects must have a Converted Athlete.</errorMessage>
</ValidationRule>